Use URI instead of URL for document namespace
Fixes #82

Note: This commit removes escaping of the namespace for the URI
This may cause an incompatibility for some applications

Signed-off-by: Gary O'Neall <gary@sourceauditor.com>